# droidpermscanner

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  config.h.in  configure  configure.ac
DroidPermScanner/: DroidPermScanner.cbp  DroidPermScanner.depend  DroidPermScanner.layout
DroidPermScanner/include/: config.h  droidpermscanner.h
DroidPermScanner/src/: Makefile.t0mm13b  droidpermscanner.c  droidpermscanner.l  droidpermscanner_main.c  droidpermscanner_utils.c
autom4te.cache/: output.1  requests  traces.0  traces.1
include/: droidpermscanner.h
m4/: ChangeLog
man/: Makefile.am  Makefile.in  droidpermscanner.1
po/: ChangeLog  Makevars  POTFILES.in  droidpermscanner.pot
src/: Makefile.am  Makefile.in  droidpermscanner.c  droidpermscanner.l  droidpermscanner_main.c  droidpermscanner_utils.c
